src/objects/Warrant__c.object
<CustomObject>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Warrant</relationshipLabel>
        <relationshipName>Warrant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Redeem_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Redeem Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refund</label>
        <referenceTo>BGBK__Refund2__c</referenceTo>
        <relationshipLabel>Warrant</relationshipLabel>
        <relationshipName>Warrant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date the warrant is returned to Department of Licensing.</inlineHelpText>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Warrant</label>
    <listViews>
        <fullName>All_Warrants</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Refund__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>All Warrants</label>
    </listViews>
    <listViews>
        <fullName>Warrants_All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Refund__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>Warrants-All</label>
    </listViews>
    <nameField>
        <displayFormat>WAR{YY}-{000000}</displayFormat>
        <label>Warrant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warrant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>